# study-buddy

./: .gitignore  bsconfig.json  cssnano.config.js  index.html  package.json  style.css
src/: App.re  CreateButton.bs.js  CreateButton.re  CreateDeck.bs.js  CreateDeck.re  CreateDeck.res  CreateDeckButton.bs.js  CreateDeckButton.re  CreateDeckButton.res  CreateDeckDialog.bs.js  CreateDeckDialog.re  CreateDeckDialog.res  CreateDialog.bs.js  CreateDialog.re  Deck.bs.js  Deck.re  Deck.res  Index.bs.js  Index.re  Index.res  NewCard.re  NewCard.res  NewCardWindow.bs.js  NewCardWindow.re  NewDeck.re  NewDeck.res  Tauri.re  Title.bs.js  Title.re  Utility.re  Utility.res
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  deck.rs  main.rs
